--- a/index.html
+++ b/index.html
@@ -11,32 +11,29 @@
 <body>
     <div class="page">
         <div class="bloc">
-            <div class="center">
-                <form id="form" action="/">
-                    <div class="values">
-                        <div>
-                            <label>a =</label>
-                            <input type="text" name="a" size="2" required>
-                        </div>
-                        <div>
-                            <label>b =</label>
-                            <input type="text" name="b" size="2" required>
-                        </div>
-                        <div>
-                            <label>c =</label>
-                            <input type="text" name="c" size="2" required>
-                        </div>
-                    </div>
-                    <br />
+            <div class="request">
+                <form id="form" >
                     <div>
-                    <button onclick="clic()">Calculer</button>
+                        <label>a =</label>
+                        <input type="text" name="a" size="2" required>
                     </div>
+                    <div>
+                        <label>b =</label>
+                        <input type="text" name="b" size="2" required>
+                    </div>
+                    <div>
+                        <label>c =</label>
+                        <input type="text" name="c" size="2" required>
+                    </div>
+                
                 </form>
+                <br />
+                <button onclick="clic()">Calculer</button>
             </div>
 
             <p id="reponse"></p>
             <p class="copyright">&copy; 2022 Mathys</p>
-        </div>
+    </div>
     </div>
 </body>
 <footer>
