--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="page">
         <div class="bloc">
-            <div class="request">
+            <div class="fixed-bloc">
+                <h2>f(x) = ax²+bx+c</h2>
                 <form id="form" >
                     <div>
                         <label>a =</label>
@@ -30,14 +31,16 @@
                 <br />
                 <button onclick="clic()">Calculer</button>
             </div>
-
+        <div id=opened-bloc>
             <p id="reponse"></p>
+            </div>
             <p class="copyright">&copy; 2022 Mathys</p>
-    </div>
+        </div>
     </div>
 </body>
 <footer>
     <a href="https://www.flaticon.com/fr/icones-gratuites/graphique-lineaire" target="_blank" title="graphique linéaire icônes">Graphique linéaire icônes créées par Pixelmeetup - Flaticon</a>
+    <div> Icônes conçues par <a href="https://www.freepik.com" title="Freepik"> Freepik </a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com'</a>
 </footer>
 </html>
 <script src="Untitled-1.js"></script>
