--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="graphique-lineaire.png">
 </head>
 <body>
-    <div class="page">
+    <div class="page" id="page">
         <div class="bloc">
             <div class="fixed-bloc">
                 <h2>f(x) = ax²+bx+c</h2>
@@ -34,13 +34,15 @@
         <div id=opened-bloc>
             <p id="reponse"></p>
             </div>
-            <p class="copyright">&copy; 2022 Mathys</p>
+            <p class="copyright" id="copyright">&copy; 2022 Mathys</p>
         </div>
     </div>
+   
 </body>
 <footer>
     <a href="https://www.flaticon.com/fr/icones-gratuites/graphique-lineaire" target="_blank" title="graphique linéaire icônes">Graphique linéaire icônes créées par Pixelmeetup - Flaticon</a>
     <div> Icônes conçues par <a href="https://www.freepik.com" title="Freepik"> Freepik </a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com'</a>
 </footer>
 </html>
-<script src="Untitled-1.js"></script>
+<script src="clic.js"></script>
+<script src="courbe.js"></script>
