--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                 <br />
                 <button onclick="clic()">Calculer</button>
             </div>
-        <div id=opened-bloc>
-            <p id="reponse"></p>
+            <div id=opened-bloc>
+                <p id="reponse"></p>
             </div>
+            <div id="graph"></div>
             <p class="copyright" id="copyright">&copy; 2022 Mathys</p>
         </div>
     </div>
@@ -45,4 +46,5 @@
 </footer>
 </html>
 <script src="clic.js"></script>
+<script src="zoom.js"></script>
 <script src="courbe.js"></script>
