--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </button>
         <nav id="nav" hidden>
             <h3>Style :</h3>
-            <button class="nav-button" onclick="darkmode()">
+            <button class="nav-button" id="darkmode-button" onclick="darkmode()">
                 <img src="darkmode_white.svg" width="16px" height="16px">
                 Mode Sombre
             </button>
-            <button class="nav-button" onclick="businessmode()">
+            <button class="nav-button" id="businessmode-button" onclick="businessmode()">
                 Business
             </button>
-            <button class="nav-button" onclick="originalmode()">
+            <button class="nav-button" id="originalmode-button" onclick="originalmode()">
                 Original
             </button>
         </nav>
