(importation polynomial icon)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="menu.css">
     <title>Polynome converter</title>
-    <link rel="icon" type="image/png" href="graphique-lineaire.png">
+    <link rel="icon" type="image/png" href="polynomial_icon.svg">
 </head>
 <body>
     <div class="menu">
