--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="menu.css">
     <title>Polynome converter</title>
-    <link rel="icon" type="image/png" href="polynomial_icon.svg">
+    <link id="icon-page" rel="icon" type="image/png" href="polynomial_icon.svg">
 </head>
 <body>
     <div class="menu">
@@ -57,11 +57,10 @@
             <p class="copyright" id="copyright">&copy; 2022 Mathys</p>
         </div>
     </div>
-    <div id="overlay" hidden></div>
+    <div id="overlay" onclick="menu()" hidden></div>
 </body>
 <footer>
-    <a href="https://www.flaticon.com/fr/icones-gratuites/graphique-lineaire" target="_blank" title="graphique linéaire icônes">Graphique linéaire icônes créées par Pixelmeetup - Flaticon</a>
-    <div> Icônes conçues par <a href="https://www.freepik.com" title="Freepik"> Freepik </a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com'</a>
+    
 </footer>
 </html>
 <script src="clic.js"></script>
