--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="style\index.css">
+    <link rel="stylesheet" href="style\menu.css">
     <title>Polynome converter</title>
     <link id="icon-page" rel="icon" type="image/png" href="polynomial_icon.svg">
 </head>
@@ -63,7 +63,7 @@
     
 </footer>
 </html>
-<script src="clic.js"></script>
-<script src="zoom.js"></script>
-<script src="courbe.js"></script>
-<script src="menu.js"></script>
+<script src="scripts\clic.js"></script>
+<script src="scripts\zoom.js"></script>
+<script src="scripts\courbe.js"></script>
+<script src="scripts\menu.js"></script>
