--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="style\index.css">
     <link rel="stylesheet" href="style\menu.css">
     <title>Polynome converter</title>
-    <link id="icon-page" rel="icon" type="image/png" href="polynomial_icon.svg">
+    <link id="icon-page" rel="icon" type="image/png" href="img/polynomial_icon.svg">
 </head>
 <body>
     <div class="menu">
         <button id="hamburger" onclick="menu()">
-            <img src="menu_hamburger.svg" width="48px" height="48px">
+            <img src="img/menu_hamburger.svg" width="48px" height="48px">
         </button>
         <nav id="nav" hidden>
             <h3>Style :</h3>
             <button class="nav-button" id="darkmode-button" onclick="darkmode()">
-                <img src="darkmode_white.svg" width="16px" height="16px">
+                <img src="img/darkmode_white.svg" width="16px" height="16px">
                 Mode Sombre
             </button>
             <button class="nav-button" id="businessmode-button" onclick="businessmode()">
